# jamie-oliver-ai

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  PR_DESCRIPTION.md  README.md  check-git.sh  env
apps/backend-search/: .dockerignore  .env.example  Dockerfile  PYTHON_VERSION.md  README.md  batch_import_urls_from_md.py  diagnose_chunker_input.py  ingest_json_recipes.py  install.sh  pyproject.toml  requirements.txt  update_existing_recipes_metadata.py  vercel.json
apps/backend-search/api/: index.py
apps/backend-search/db/: match_chunks_function.sql  search_function.sql  setup.sql  setup_384.sql  setup_intelligent_chunks_384.sql
apps/backend-search/demos/: README.md  demo_semantic_search.py
apps/backend-search/docs/: README.md
apps/backend-search/examples/: README.md  explain_intent_capture.py  explain_intent_detection.py  explain_text_to_vector.py
apps/backend-search/jamie_oliver_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/backend-search/recipe_pdf_agent/: __init__.py  cli.py  config.py  embed.py  joav0_schema.json  kebabcase.py  logging_utils.py  parse_heuristics.py  pdf_extract.py  pipeline.py  supabase_store.py  time_utils.py  validate.py
apps/backend-search/recipe_pdf_agent_llama/: __init__.py  chunker.py  chunker_density.py  chunker_deterministic.py  chunker_enrich.py  chunker_multiview.py  chunker_semantic.py  cli.py  config.py  embed.py  kebabcase.py  langchain_ing_steps.py  langchain_models.py  langchain_parser.py  langchain_sections.py  llama_structurer.py  ollama_client.py  pdf_extract.py  pipeline.py  prompts.py  supabase_store.py  validate.py
apps/backend-voice/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt  startup.sh
(+763 files in other folders)
